ags (3.16.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added command line argument --no-config
	* added AGS_CONFIG environment variable
	* updated gsequencer.1.xml
	* improved unit tests make use of AGS_TEST_CONFIG and --no-config

ags (3.16.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsSimpleFile proper plugin failure while reading
	* fixed ref-count ags-fx-ladspa, ags-fx-dssi, ags-fx-lv2 and ags-fx-vst3

ags (3.16.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsFFPlayer loader timeout
	* fixed memory leaks
	* fixed reference leaks
	* fixed AgsChorusUtil max buffer length
	* extended functional machine add and destroy test to use the new instruments AgsHybridSynth, AgsHybridFMSynth and AgsHybridSF2Synth
	* minor improvements
	* added ags-fx-synth unit tests
	* added ags-fx-fm-synth unit tests
	* added ags_functional_hybrid_synth_test.c

ags (3.16.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsSF2Synth missing program
	* fixed AgsSF2Synth missing resample
	* FIXME:JK: see ags_sf2_synth_util.c

ags (3.16.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsFFPlayer restore from XML

ags (3.16.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added fluid custom filter to AgsSF2SynthUtil

ags (3.16.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing Lv2 plugins
	* updated gtk-doc XML and automake files
	* disabled warp scrollbars
	* minor improvements

ags (3.16.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_sf2_synth_util_load_midi_locale() load sample near midi key

ags (3.16.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsMachineInputLine struct fixes double mapped recalls

ags (3.16.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsSF2Synth
	* implemented ags-fx-sf2-synth