@@ -2355,6 +2355,7 @@ libags_audio_task_h_sources = \
 	ags/audio/task/ags_start_soundcard.h \
 	ags/audio/task/ags_stop_sequencer.h \
 	ags/audio/task/ags_stop_soundcard.h \
+	ags/audio/task/ags_stop_thread.h \
 	ags/audio/task/ags_switch_buffer_flag.h \
 	ags/audio/task/ags_tic_device.h \
 	ags/audio/task/ags_toggle_pattern_bit.h \
@@ -2436,6 +2437,7 @@ libags_audio_task_c_sources = \
 	ags/audio/task/ags_start_soundcard.c \
 	ags/audio/task/ags_stop_sequencer.c \
 	ags/audio/task/ags_stop_soundcard.c \
+	ags/audio/task/ags_stop_thread.c \
 	ags/audio/task/ags_switch_buffer_flag.c \
 	ags/audio/task/ags_tic_device.c \
 	ags/audio/task/ags_toggle_pattern_bit.c \
