@@ -179,9 +179,12 @@ main(int argc, char **argv)
   //ao_initialize();
 
 #if defined(AGS_WITH_GSTREAMER)
-  gst_argc = 0;
-  gst_argv = NULL;
-  
+  gst_argc = 1;
+  gst_argv = (char **) g_malloc(2 * sizeof(char *));
+
+  gst_argv[0] = g_strdup(argv[0]);
+  gst_argv[1] = NULL;
+    
   gst_init(&gst_argc, &gst_argv);
 #endif
   
