@@ -746,6 +746,7 @@ libags_audio_sources = files(
   'audio/task/ags_start_soundcard.c',
   'audio/task/ags_stop_sequencer.c',
   'audio/task/ags_stop_soundcard.c',
+  'audio/task/ags_stop_thread.c',
   'audio/task/ags_switch_buffer_flag.c',
   'audio/task/ags_tic_device.c',
   'audio/task/ags_toggle_pattern_bit.c',
@@ -2050,6 +2051,7 @@ libags_audio_audio_task_headers = [
   'audio/task/ags_start_soundcard.h',
   'audio/task/ags_stop_sequencer.h',
   'audio/task/ags_stop_soundcard.h',
+  'audio/task/ags_stop_thread.h',
   'audio/task/ags_switch_buffer_flag.h',
   'audio/task/ags_tic_device.h',
   'audio/task/ags_toggle_pattern_bit.h',
